--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 telegram-bot = "^0.8.0"
 futures = "^0.3.21"
+redis = "^0.21.5"
 tokio = { version = "0.2", features = ["full"] }
