--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-telegram-bot = "^0.8.0"
+frankenstein = { version = "^0.12.0", features = ["async-http-client"] }
 futures = "^0.3.21"
 redis = "^0.21.5"
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }
+tempfile = "^3.3.0"
