--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ futures = "^0.3.21"
 redis = "^0.21.5"
 tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }
 tempfile = "^3.3.0"
+serde = "^1.0.0"
+toml = "^0.5.8"
