--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-frankenstein = { version = "^0.12.0", features = ["async-http-client"] }
+frankenstein = { version = "^0.19.2", features = ["async-http-client"] }
 futures = "^0.3.21"
 redis = "^0.21.5"
 tokio = { version = "1", features = ["rt-multi-thread", "process", "macros"] }
 tempfile = "^3.3.0"
-serde = "^1.0.0"
+serde = { version = "^1.0.0", features = ["derive"] }
+serde_json = "^1.0"
+log = "^0.4.17"
+env_logger = "^0.9.0"
 toml = "^0.5.8"
+typed-builder = "^0.10.0"
